--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ h1 {
 }
 
 h1:hover {
-    font-variation-settings: 'wght' 500;
+    font-variation-settings: 'wght' 400;
 }
 
 /* Author Name */
@@ -136,6 +136,7 @@ h2 {
 h3 {
     font-family: NotoSansMon-VariableFont;
     font-size: var(--text-xl);
+    font-weight: 400;
     margin-top: 20px;
     margin-bottom: 10px;
     text-align: center;
