--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@
     margin: 0 auto;
     transition: max-height 0.3s;
 }
+
+
 @media (max-width: 600px) {
     .hero-img {
         max-height: 180px;
@@ -96,7 +98,6 @@
   --accent-300: hsl(30, 15%, 80%);
   --accent-500: hsl(30, 20%, 60%);
   --accent-700: hsl(30, 25%, 35%);
-  --accent: var(--accent-500);
   
   /* Neutral scale for text and borders */
   --neutral-100: hsl(0, 0%, 98%);
@@ -161,6 +162,7 @@ h1 {
     font-variation-settings: 'wght' 200;
     margin-bottom: 10px;
     transition: font-variation-settings 0.3s ease;
+
 }
 
 h1:hover {
@@ -183,6 +185,7 @@ h3 {
     font-family: NotoSansMon-VariableFont;
     font-size: var(--text-xl);
     color: var(--primary-900);
+    padding: 10px;
     font-weight: 400;
     margin-top: 20px;
     margin-bottom: 10px;
@@ -226,29 +229,20 @@ p {
 p:hover{
     color: var(--primary-900);
     transition: color 0.3s ease;
-    background: var(--neutral-300);
+    background-color: var(--neutral-300);
+    border-radius: 50px;
 }
 
-.poem {
+blockquote {
     font-style: normal;
     margin: 20px auto;
     padding: 50px;
     text-align: center;
     max-width: 600px;
-    font-weight: bold;
-    background-color: var(--surface);
-    border-radius: 10px;
-}
-.poem-line {
-    margin-bottom: 20px;
-}
-
-.annotation {
-    background-color: var(--background);
-    border-left: 4px solid var(--background-dark);
-    padding: 10px 15px;
-    margin: 20px 0;
-    border-radius: 4px;
+    background-color: var(--primary-light);
+    border-radius: 50px;
+    border-style: double;
+    border-color: var(--accent-300);
 }
 
 footer {
